--- a/HFrame.Web/Views/Default/Register.cshtml
+++ b/HFrame.Web/Views/Default/Register.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model HFrame.Web.Default.Model.RegisterModel
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -9,13 +9,7 @@
 <head>
     <meta charset="utf-8" />
     <title>注册</title>
-
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
+    <script src="~/Content/common.js"></script>
     <style>
         .center {
             margin-top: 25%;
@@ -26,31 +20,31 @@
                 margin-left: 25%;
             }
         }
-
-        .BackImg {
-            background-image: "";
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6 center">
+            @using (Html.BeginForm("Register","Default",FormMethod.Post,new { @class = "col-md-6 center" }))
+            {
                 <div class="form-group">
-                    <input class="form-control" placeholder="请输入用户名" type="text" />
+                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "请输入用户名" })
+                </div>
+                <div class="form-group">
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "请输入密码" })
                 </div>
 
                 <div class="form-group">
-                    <input class="form-control" placeholder="请输入密码" type="password" />
+                    @Html.PasswordFor(m => m.RePassword, new { @class = "form-control", placeholder = "请再次输入密码" })
                 </div>
 
                 <div class="form-group">
-                    <input class="form-control" placeholder="请再次输入密码" type="password" />
+                    @Html.TextBoxFor(m => m.Telephone, new { @class = "form-control", placeholder = "请输入手机号" })
                 </div>
                 <div class="form-group">
-                    <a class="btn btn-primary btn-block" href="@Url.Action("Register")">注册</a>
+                    <input type="submit" value="注册" class="btn btn-primary btn-block" />
                 </div>
-            </div>
+            }
         </div>
     </div>
 </body>
