--- a/HFrame.Web/Views/Shared/_Layout.cshtml
+++ b/HFrame.Web/Views/Shared/_Layout.cshtml
@@ -5,18 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
-    <link href="~/Content/Plugin/bootstrap/css/bootstrap.min.css" />
-    <script src="~/Content/Plugin/bootstrap/js/bootstrap.js"></script>
-    <script src="~/Content/Plugin/bootstrap/js/bootstrap.js"></script>
+    @Styles.Render("~/Bootstrap")
+
+    @Scripts.Render("~/Jquery")
+    @Scripts.Render("~/Bootstrap")
 </head>
 <body>
-    
     <div class="container body-content">
         @RenderBody()
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
 </html>
