--- a/HFrame.Web/Views/Default/Login.cshtml
+++ b/HFrame.Web/Views/Default/Login.cshtml
@@ -9,22 +9,12 @@
 <head>
     <meta charset="utf-8" />
     <title>登陆</title>
-    <style>
-        .center {
-            margin-top: 25%;
-        }
-
-        @@media screen and (min-width:960px) {
-            .center {
-                margin-left: 25%;
-            }
-        }
-    </style>
 </head>
-<body>
+<body class="background">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 center">
+            <div class="col-md-6 center loginbord">
+                <h2 class="loginText">登陆</h2>
                 <div class="form-group">
                     <input class="form-control" placeholder="请输入用户名" type="text" />
                 </div>
