--- a/HFrame.Web/Views/Default/Register.cshtml
+++ b/HFrame.Web/Views/Default/Register.cshtml
@@ -13,7 +13,7 @@
 <body class="background">
     <div>
         <div class="row">
-            @using (Html.BeginForm("Register","Default",FormMethod.Post,new { @class = "col-md-6 center loginbord" }))
+            @using (Html.BeginForm("Register", "Default", FormMethod.Post, new { @class = "col-md-6 center loginbord" }))
             {
                 <h2 class="loginText">注册</h2>
                 <div class="form-group">
@@ -30,6 +30,19 @@
                 <div class="form-group">
                     @Html.TextBoxFor(m => m.Telephone, new { @class = "form-control", placeholder = "请输入手机号" })
                 </div>
+
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-9">
+
+                            @Html.TextBoxFor(m => m.VerisonCode, new { @class = "form-control", placeholder = "请输入验证码" })
+                        </div>
+                        <div class="col-sm-3" style="padding-left:0px;">
+                            <img border="0" style="cursor:pointer;" alt="点击刷新验证码" src="@Url.Action("ValidateCodeImg")">
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <input type="submit" value="注册" class="btn btn-primary btn-block" />
                 </div>
@@ -38,10 +51,3 @@
     </div>
 </body>
 </html>
-<script>
-    common.interceptform(function (r) {
-        if (r.ErrorCode == 0) {
-            location.href = "@Url.Action("Login")";
-        }
-    });
-</script>
